Added Time Tracking

--- a/iTEMS/Views/TaskTrackers/Create.cshtml
+++ b/iTEMS/Views/TaskTrackers/Create.cshtml
@@ -51,13 +51,13 @@
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EstimatedTime" class="control-label"></label>
+                <label asp-for="EstimatedTime" class="control-label">Estimated Time<p><small>Please State In Hours, Days, Months or Years</small></p></label>            
                 <input asp-for="EstimatedTime" class="form-control" />
                 <span asp-validation-for="EstimatedTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ActualTime" class="control-label"></label>
-                <input asp-for="ActualTime" class="form-control" />
+                <label asp-for="ActualTime" class="control-label" style="display: none;"></label>
+                <input asp-for="ActualTime" class="form-control" style="display: none;" />
                 <span asp-validation-for="ActualTime" class="text-danger"></span>
             </div>
             <div class="form-group">
