--- a/iTEMS/Views/TaskTrackers/Edit.cshtml
+++ b/iTEMS/Views/TaskTrackers/Edit.cshtml
@@ -59,8 +59,8 @@
                 <span asp-validation-for="EstimatedTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ActualTime" class="control-label"></label>
-                <input asp-for="ActualTime" class="form-control" />
+                <label asp-for="ActualTime" class="control-label" style="display: none;"></label>
+                <input asp-for="ActualTime" class="form-control" style="display: none;" />
                 <span asp-validation-for="ActualTime" class="text-danger"></span>
             </div>
             <div class="form-group">
