--- a/iTEMS/Areas/Identity/Pages/Account/Login.cshtml
+++ b/iTEMS/Areas/Identity/Pages/Account/Login.cshtml
@@ -35,23 +35,57 @@
 
         .card {
             max-width: 600px; /* Increase the max-width */
-            width: 100%;
+            width: 90%;
+            padding: 10px;
+            border-radius: 15px;
+            background-color: white;
+        }
+
+        .card-header {
+            border-radius: 10px;
         }
 
         .card-title {
+            float: none;
             text-align: center; /* Center the Log In header */
             font-size: 24px; /* Increase text size */
             font-weight: bold; /* Make it bold */
+            margin: 0;
             /*margin-bottom: 30px;  Add some bottom margin for spacing */
+        }
+
+        .card-footer {
+            text-align: center; /* Center the footer */
+        }
+
+            .card-footer a {
+                color: #3897f0;
+                text-decoration: none;
+            }
+
+                .card-footer a:hover {
+                    text-decoration: underline;
+                }
+
+        .form-group {
+            margin-bottom: 20px;
         }
 
         .form-check-label {
             margin-left: 20px; /* Reset the margin for form-check-label */
         }
+
+        .btn-primary {
+            width: 83%;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #0096FF;
+            color: #fff;
+            cursor: pointer;
+        }
     </style>
 </head>
-
-
 
 
 <div class="container">
@@ -59,51 +93,48 @@
         <div class="card-header">
             <h3 class="card-title">Log In</h3>
         </div>
-            <form class="form-horizontal" id="account" method="post">
+        <form class="form-horizontal" id="account" method="post">
 
-                <div class="card-body">
-                    <div class="form-group row">
-                        <label asp-for="Input.UserName" class="col-sm-2 col-form-label">Username</label>
-                            <div class="col-sm-10">
-                             <input asp-for="Input.UserName" class="form-control" autocomplete="username" aria-required="true" placeholder="Username" />
-                            </div>
-                        <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            <div class="card-body">
+                <div class="form-group row">
+                    <label asp-for="Input.UserName" class="offset-sm-1 col-sm-2 col-form-label">Username</label>
+                    <div class="offset-sm-1 col-sm-10 offset-sm-1">
+                        <input asp-for="Input.UserName" class="form-control" autocomplete="username" aria-required="true" placeholder="Username" type="text" value="" />
                     </div>
+                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                </div>
 
-                    <div class="form-group row">
-                        <label asp-for="Input.Password" class="col-sm-2 col-form-label">Password</label>
-                            <div class="col-sm-10">
-                                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Password" />
-                            </div>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <div class="form-group row">
+                    <label asp-for="Input.Password" class="offset-sm-1 col-sm-2 col-form-label">Password</label>
+                    <div class="offset-sm-1 col-sm-10 offset-sm-1">
+                        <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Password" />
                     </div>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
 
-                    <div class="form-group row">
-                        <div class="offset-sm-2 col-sm-10">
-                            <div class="form-check">
+                <div class="form-group row">
+                    <div class="offset-sm-2 col-sm-10">
+                        <div class="form-check">
                             <label class="form-check-label">
-                                <input class="form-check-input" asp-for="Input.RememberMe" />
+                                <input class="form-check-input" asp-for="Input.RememberMe" type="checkbox" value="true" />
                                 @Html.DisplayNameFor(m => m.Input.RememberMe)
                             </label>
-                            </div>
                         </div>
                     </div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
-                <div class="card-footer">
-                    <div>
-                        <p>
-                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                        </p>
-                        <p>
-                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                        </p>
-                        <p>
-                            <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                        </p>
-                    </div>
+                <button id="login-submit" type="submit" class="offset-sm-1 btn btn-lg btn-primary">Log in</button>
+            </div>
+            <div class="card-footer">
+                <div>
+                    <p>
+                        <a id="forgot-password">Forgot your password? click </a><a asp-page="./ForgotPassword">HERE</a>
+                    </p>
+                    <p>
+                        <a id="">Don’t have an account? </a><a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">SIGN UP</a>
+                    </p>
                 </div>
-            </form>
+            </div>
+        </form>
     </div>
 </div>
 
