Change back to original format

--- a/iTEMS/Areas/Identity/Pages/Account/Login.cshtml
+++ b/iTEMS/Areas/Identity/Pages/Account/Login.cshtml
@@ -127,7 +127,7 @@
             <div class="card-footer">
                 <div>
                     <p>
-                        <a id="forgot-password">Forgot your password? click </a><a asp-page="./ForgotPassword">Here</a>
+                        <a id="forgot-password">Forgot your password? click </a><a asp-page="./ForgotPassword">HERE</a>
                     </p>
                     <p>
                         <a id="">Don’t have an account? </a><a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">SIGN UP</a>
