--- a/iTEMS/Views/TaskTrackers/Create.cshtml
+++ b/iTEMS/Views/TaskTrackers/Create.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Priority" class="control-label"></label>
-                <input asp-for="Priority" class="form-control" />
+                <select asp-for="Priority" class="form-control" asp-items="ViewBag.PriorityList"></select>
                 <span asp-validation-for="Priority" class="text-danger"></span>
             </div>
             <div class="form-group">
