--- a/iTEMS/Views/TaskTrackers/Edit.cshtml
+++ b/iTEMS/Views/TaskTrackers/Edit.cshtml
@@ -29,7 +29,7 @@
                 <span asp-validation-for="Assignee" class="text-danger"></span>
             </div>  *@
             <div class="form-group">
-                <label asp-for="AssignedTo" class="control-label"></label>
+                <label asp-for="AssignedTo" class="control-label">Assigned To</label>
                 <select asp-for="AssignedTo" class="form-control" asp-items="ViewBag.AssignedTo"></select>
                 <span asp-validation-for="AssignedTo" class="text-danger"></span>
             </div>
