--- a/iTEMS/Areas/Identity/Pages/Account/Register.cshtml
+++ b/iTEMS/Areas/Identity/Pages/Account/Register.cshtml
@@ -187,6 +187,14 @@
                     </div>
 
                     <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+
+                    <div class="card-footer">
+                        <div>
+                            <p>
+                                <a id=""></a><a asp-page="./Login">Back to Login</a>
+                            </p>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
