--- a/iTEMS/Areas/Identity/Pages/Account/Register.cshtml
+++ b/iTEMS/Areas/Identity/Pages/Account/Register.cshtml
@@ -119,9 +119,17 @@
                     <div class="form-group row">
                         <label asp-for="Input.ConfirmPassword" class="col-sm-4 col-form-label">Confirm Password</label>
                         <div class="col-sm-12">
-                            <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Password" type="text" value="" />
+                            <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Confirm Password" type="text" value="" />
                         </div>
                         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group row">
+                        <label asp-for="Input.EmpNo" class="col-sm-4 col-form-label">Employee Number</label>
+                        <div class="col-sm-12">
+                            <input asp-for="Input.EmpNo" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Employee Number" type="text" value="" />
+                        </div>
+                        <span asp-validation-for="Input.EmpNo" class="text-danger"></span>
                     </div>
 
                     <div class="form-group row">
@@ -168,6 +176,14 @@
                             <input asp-for="Input.DateofBirth" class="form-control" aria-required="true" placeholder="Date Of Birth" />
                         </div>                                             
                         <span asp-validation-for="Input.DateofBirth" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group row">
+                        <label asp-for="Input.Address" class="col-sm-4 col-form-label">Address</label>
+                        <div class="col-sm-12">
+                            <input asp-for="Input.Address" class="form-control" aria-required="true" placeholder="Address" />
+                        </div>
+                        <span asp-validation-for="Input.Address" class="text-danger"></span>
                     </div>
 
                     <div class="form-group row">
