Add forgot password page

--- a/iTEMS/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/iTEMS/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -5,22 +5,122 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>AdminLTE 3 | General Form Elements</title>
+
+    <!-- Google Font: Source Sans Pro -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="~/AdminLTE/plugins/fontawesome-free/css/all.min.css">
+    <!-- overlayScrollbars -->
+    <link rel="stylesheet" href="~/AdminLTE/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="~/AdminLTE/dist/css/adminlte.min.css">
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.0/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body, html {
+            height: 100%;
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+        }
+
+        .card {
+            max-width: 600px; /* Increase the max-width */
+            width: 90%;
+            padding: 10px;
+            border-radius: 15px;
+            background-color: white;
+        }
+
+        .card-header {
+            border-radius: 10px;
+        }
+
+        .card-title {
+            float: none;
+            text-align: center; /* Center the Log In header */
+            font-size: 24px; /* Increase text size */
+            font-weight: bold; /* Make it bold */
+            margin: 0;
+            /*margin-bottom: 30px;  Add some bottom margin for spacing */
+        }
+
+        .card-footer {
+            text-align: center; /* Center the footer */
+        }
+
+            .card-footer a {
+                color: #3897f0;
+                text-decoration: none;
+            }
+
+                .card-footer a:hover {
+                    text-decoration: underline;
+                }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-check-label {
+            margin-left: 20px; /* Reset the margin for form-check-label */
+        }
+
+        .btn-primary {
+            width: 83%;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #0096FF;
+            color: #fff;
+            cursor: pointer;
+        }
+    </style>
+</head>
+
+
+<div class="container">
+    <div class="card card-dark">
+        <div class="card-header">
+            <h3 class="card-title">Forgot your password</h3>
+        </div>
+        <form class="form-horizontal" id="account" method="post">
+
+            <div class="card-body">
+                <div class="form-group row">
+                    <label asp-for="Input.Email" class="offset-sm-1 col-sm-11 col-form-label">Please provide your email for verification</label>
+                    <div class="offset-sm-1 col-sm-10 offset-sm-1">
+                        <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="true" placeholder="Email" type="text" value="" />
+                    </div>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+
+                <button id="reset" type="reset" class="offset-sm-1 btn btn-lg btn-primary" onclick="showAlert()">Reset</button>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <div class="card-footer">
+                <div>
+                    <p>
+                        <a id="">Back to </a><a asp-page="./Login">Login</a>
+                    </p>
+                </div>
+            </div>
         </form>
     </div>
 </div>
+
+<script>
+        function showAlert() {
+            alert("Your verification has sent to your email");
+        }
+    </script>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
