--- a/iTEMS/Areas/Identity/Pages/Account/Register.cshtml
+++ b/iTEMS/Areas/Identity/Pages/Account/Register.cshtml
@@ -129,7 +129,7 @@
                     <div class="form-group row">
                         <label asp-for="Input.ConfirmPassword" class="col-sm-4 col-form-label">Confirm Password</label>
                         <div class="col-sm-12 position-relative">
-                            <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Password" id="confirmPassword" type="password" />
+                            <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Confirm Password" id="confirmPassword" type="password" />
                             <span id="toggleConfirmPasswordText" class="toggle-password" onclick="toggleConfirmPasswordVisibility()">Show</span>
                             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>                            
                         </div>
