--- a/iTEMS/Areas/Identity/Pages/Account/Register.cshtml
+++ b/iTEMS/Areas/Identity/Pages/Account/Register.cshtml
@@ -181,7 +181,7 @@
                         </div>
                     </div>
 
-                    <p id="selectedCountry"></p>
+                    <p id="selectedCountry" style="display: none;"></p>
 
                     <div class="form-group row" style="display: none;" id="stateDropdown">
                         <!-- Hide initially -->
@@ -198,7 +198,7 @@
                         </div>
                     </div>
 
-                    <p id="selectedState"></p>
+                    <p id="selectedState" style="display: none;"></p>
 
                     <div class="form-group row" style="display: none;" id="areaDropdown">
                         <!-- Hide initially -->
@@ -215,7 +215,7 @@
                         </div>
                     </div>
 
-                    <p id="selectedArea"></p>
+                    <p id="selectedArea" style="display: none;"></p>
 
 
                     <div class="form-group row">
