--- a/iTEMS/Areas/Identity/Pages/Account/Login.cshtml
+++ b/iTEMS/Areas/Identity/Pages/Account/Login.cshtml
@@ -24,7 +24,9 @@
     <style>
         body, html {
             height: 100%;
-        }
+            background-image: url("https://img.freepik.com/free-vector/white-background-with-blue-tech-hexagon_1017-19366.jpg?w=900&t=st=1716364709~exp=1716365309~hmac=9b9c37f04fbfca310261f1a4ae804b72e37b28eff3ade34ce62283af165f4f08");
+            background-size: cover;
+        }    
 
         .container {
             display: flex;
@@ -96,9 +98,8 @@
     </style>
 </head>
 
-
-<div class="container">
-    <div class="card card-dark">
+<div class="container">   
+    <div class="card card-dark">      
         <div class="card-header">
             <h3 class="card-title">Log In</h3>
         </div>
