--- a/iTEMS/Areas/Identity/Pages/Account/Login.cshtml
+++ b/iTEMS/Areas/Identity/Pages/Account/Login.cshtml
@@ -156,7 +156,7 @@
                         <a id="">Don’t have an account? </a><a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">SIGN UP</a>
                     </p>
                     <p>
-                        <a id="">Go to </a><a asp-page="./Lockout">HOME</a> 
+                        <a id="">Go to </a><a asp-area="Views" asp-page="/Home/Index">HOME</a>
                     </p>
                 </div>
             </div>
