--- a/iTEMS/Views/TaskTrackers/Create.cshtml
+++ b/iTEMS/Views/TaskTrackers/Create.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" asp-controller="TaskTrackers" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -67,6 +67,12 @@
                 <label asp-for="Attachments" class="control-label"></label>
                 <input asp-for="Attachments" class="form-control" />
                 <span asp-validation-for="Attachments" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FilePaths" class="control-label"></label>
+                <input type="file" name="files" multiple class="form-control-file" />
+                @* <input asp-for="FilePaths" class="form-control" /> *@
+                <span asp-validation-for="FilePaths" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Comments" class="control-label"></label>
