--- a/iTEMS/Views/TaskTrackers/Index.cshtml
+++ b/iTEMS/Views/TaskTrackers/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<iTEMS.Models.TaskTracker>
+﻿@using System.IO
+@model IEnumerable<iTEMS.Models.TaskTracker>
 
 @{
     ViewData["Title"] = "Index";
@@ -50,6 +51,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Attachments)
             </th>
+                <th>
+                    Uploaded Files
+                </th>
             <th>
                 @Html.DisplayNameFor(model => model.Comments)
             </th>
@@ -107,6 +111,21 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Attachments)
             </td>
+                    <td>
+                        @if (item.FilePaths != null && item.FilePaths.Any())
+                        {
+                            foreach (var filePath in item.FilePaths)
+                            {
+                                <a href="@Url.Action("DownloadFile", "TaskTrackers", new { id = item.Id })" download="@System.IO.Path.GetFileName(filePath)">@System.IO.Path.GetFileName(filePath)</a>
+                                <br />
+                            }
+                        }
+                        else
+                        {
+                            <span>No files uploaded</span>
+                        }
+                    </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Comments)
             </td>
